vlib/v/checker/tests/const_blank_ident_as_name_err.out
vlib/v/checker/tests/const_blank_ident_as_name_err.vv:1:7: error: cannot use `_` as a const name
    1 | const _ = 23
      |       ^
